compiler/lume_typech/src/tests/check/snapshots/lume_typech__tests__check__enums__typech_create_enum_param_incomp.snap
---
source: compiler/lume_typech/src/tests/check/enums.rs
description: "enum Foo { A, B(Int32) }\n\n        fn foo() {\n            let a = Foo::B(false);\n        }"
---
× error[LM4001]: mismatched types
   ╭───────────
 3 │         fn foo() {
 4 │             let a = Foo::B(false);
   │                            ^^^^^ expected type Int32, but found type Boolean...
 5 │         }
   ∶ 
 1 │ enum Foo { A, B(Int32) }
   │                 ^^^^^ ...because of type defined here
   ╰──
   help: expected type Int32
            found type Boolean
